feat(loop): stabilize continuous dev workflow
Why:
Fix gating failures and make local loop defaults usable on main branch with automatic task discovery.
What:
- Improved dev-loop config resolution for issue and task auto-detection.
- Defaulted coding CLI behavior to codex and hardened retry/docs-sync flow.
- Fixed TypeScript and lint issues across editor, schema validation, render adapter, and tests.
- Added workflow/document updates and persisted run logs for failed loop attempts.
Impact:
- `pnpm gate:fast`, `pnpm gate:full`, and docs sync checks now pass consistently.
- Developers can run loop with fewer required flags when only one active task card exists.
Risk:
- Medium. Loop behavior changed in branch policy and task resolution; monitor first few runs.
Test:
- pnpm gate:fast
- pnpm gate:full
- pnpm docs:sync-check
Prompt-Refs: ARCHITECT_v1,PLANNER_v1,BUILDER_v2,GUARDIAN_v1,REVIEWER_v1

--- a/docs/ai/tasks/T-010.md
+++ b/docs/ai/tasks/T-010.md
@@ -1,12 +1,40 @@
-# Subtask Template
+# T-010: Batch Simulation and Balance Report
 
-- Status: Planned
-- Owner:
-- Prompt-Refs: `ARCHITECT_v1`, `PLANNER_v1`, `BUILDER_v2`, `GUARDIAN_v1`, `REVIEWER_v1`
+- Status: In Progress
+- Owner: maintainer
+- Branch: `codex/010-batch-sim-and-balance-report`
+- Prompt-Plan: `ARCHITECT_v1`, `PLANNER_v1`
+- Prompt-Impl: `BUILDER_v2`
+- Prompt-Review: `GUARDIAN_v1`, `REVIEWER_v1`
 
-## Checklist
+## Goal
 
-- [ ] [S1] Define scope and acceptance criteria
+Provide a deterministic, auditable batch simulation workflow that outputs actionable balance metrics for tower-defense packages.
+
+## Scope
+
+- In scope:
+  - Define the contract for batch simulation inputs and output metrics in `runtime/core` and `tools/simulate`.
+  - Standardize balance-report fields for CLI output (`winRate`, `avgDuration`, `leakRate`, `imbalanceIndex`, sample size).
+  - Add deterministic and regression test coverage for batch aggregation and report formatting.
+  - Document usage and validation expectations for `pnpm simulate:batch`.
+- Out of scope:
+  - Any editor UI changes under `editor/`.
+  - Any AI provider or prompt pipeline behavior changes under `ai/`.
+  - Template gameplay rebalance beyond metric computation/reporting.
+  - Remote CI/CD or cloud reporting integration.
+
+## Acceptance Criteria
+
+1. Running `pnpm simulate:batch <package> <rounds>` produces deterministic aggregate metrics for the same package and seed sequence.
+2. Batch-report output includes stable, parseable fields for seed count, `winRate`, `avgDuration`, `leakRate`, and `imbalanceIndex`.
+3. Invalid batch inputs (missing package, non-positive rounds, malformed package) fail fast with clear error messaging.
+4. Automated tests cover batch metric aggregation, output formatting, and determinism guarantees.
+5. Changes remain within architecture boundaries (`runtime` + `tools/simulate`) with no cross-layer leakage.
+
+## Subtasks
+
+- [x] [S1] Define scope and acceptance criteria
 - [ ] [S2] Implement scoped code changes
 - [ ] [S3] Pass fast and full gates
 - [ ] [S4] Update docs and risk notes
