feat(loop): close S4 Update docs and risk notes
Why:
Complete subtask S4 in continuous AI loop.
What:
- Finished implementation, gates, and doc sync for Update docs and risk notes.
Impact:
- Progresses issue 10 with traceable milestone delivery.
Risk:
- Medium. Verify integration on follow-up subtasks.
Test:
FAST_GATE:pass, FULL_GATE:pass, DOC_SYNC:pass
Prompt-Refs: ARCHITECT_v1,PLANNER_v1,BUILDER_v2,GUARDIAN_v1,REVIEWER_v1

--- a/docs/ai/tasks/T-010.md
+++ b/docs/ai/tasks/T-010.md
@@ -37,7 +37,7 @@ Provide a deterministic, auditable batch simulation workflow that outputs action
 - [x] [S1] Define scope and acceptance criteria
 - [x] [S2] Implement scoped code changes
 - [x] [S3] Pass fast and full gates
-- [ ] [S4] Update docs and risk notes
+- [x] [S4] Update docs and risk notes
 - [ ] [S5] Milestone commit and memory finalize
 
 ## Notes
@@ -59,10 +59,32 @@ Provide a deterministic, auditable batch simulation workflow that outputs action
 - Executed `pnpm gate:full` (includes `lint`, `test`, `test:determinism`, `test:schema`, `test:smoke-ai-package`) and all commands passed.
 - Confirmed scope remained within existing architecture boundaries and no additional contract-level changes were introduced during S3.
 
+## S4 Docs and Risk Notes (2026-02-14)
+
+- Updated `README.md` batch simulation contract notes to document deterministic seed generation, fail-fast input validation behavior, and imbalance-index formula.
+- Added `tests/integration/batch-doc-contract.test.ts` to guard command shape and output-field order against formatter drift.
+- Kept architecture boundaries unchanged (`runtime` + `tools/simulate` only for contract behavior, docs/tests for governance evidence).
+
+## Test Evidence (S4)
+
+- `pnpm typecheck`
+- `pnpm lint`
+- `pnpm test -- tests/integration/batch-doc-contract.test.ts`
+- `pnpm test -- tests/integration/batch-report-format.test.ts tests/integration/simulate-batch-cli.test.ts`
+- `pnpm docs:sync-check`
+
+## Risks and Rollback (S4)
+
+- Risk: docs can drift from formatter field order during future refactors, leading to parser breakage downstream.
+- Mitigation: keep the doc-contract integration test green in CI/local gates when changing `tools/simulate/report.ts` or `README.md`.
+- Rollback plan: revert `README.md`, `docs/ai/tasks/T-010.md`, and `tests/integration/batch-doc-contract.test.ts` together.
+
 ## Subtask Progress
+
 - [x] [S2] Implement scoped code changes
 - [x] [S3] Pass fast and full gates
+- [x] [S4] Update docs and risk notes
 
 
 ## Subtask Progress
-- [x] [S3] Pass fast and full gates
+- [x] [S4] Update docs and risk notes
