--- a/docs/ai/tasks/T-010.md
+++ b/docs/ai/tasks/T-010.md
@@ -1,6 +1,6 @@
 # T-010: Batch Simulation and Balance Report
 
-- Status: In Progress
+- Status: Done
 - Owner: maintainer
 - Branch: `codex/010-batch-sim-and-balance-report`
 - Prompt-Plan: `ARCHITECT_v1`, `PLANNER_v1`
@@ -38,7 +38,7 @@ Provide a deterministic, auditable batch simulation workflow that outputs action
 - [x] [S2] Implement scoped code changes
 - [x] [S3] Pass fast and full gates
 - [x] [S4] Update docs and risk notes
-- [ ] [S5] Milestone commit and memory finalize
+- [x] [S5] Milestone commit and memory finalize
 
 ## Notes
 
@@ -79,12 +79,29 @@ Provide a deterministic, auditable batch simulation workflow that outputs action
 - Mitigation: keep the doc-contract integration test green in CI/local gates when changing `tools/simulate/report.ts` or `README.md`.
 - Rollback plan: revert `README.md`, `docs/ai/tasks/T-010.md`, and `tests/integration/batch-doc-contract.test.ts` together.
 
+## S5 Milestone Commit and Memory Finalize (2026-02-14)
+
+- Enhanced `tools/git-memory/append-commit-log.sh` to support multi-ref/range backfill, normalize commit-body fields, and keep file lists parseable with stable `, ` delimiters.
+- Updated `tools/git-memory/render-weekly-summary.py` risk parsing to normalize legacy bullet-prefixed risk lines from commit-log entries.
+- Backfilled missing memory-finalize commits (`6d0bed8`, `da3a3d8`, `ec6ed6c`) into `docs/ai/commit-log/2026-02.md` and regenerated `docs/ai/weekly-summary.md`.
+- Added `tests/integration/git-memory-append-commit-log.test.ts` and `tests/integration/git-memory-weekly-summary.test.ts` to guard range behavior, duplicate-skip behavior, formatter output, and risk normalization.
+
+## Test Evidence (S5)
+
+- `pnpm gate:fast`
+- `pnpm gate:full`
+- `pnpm test -- tests/integration/git-memory-append-commit-log.test.ts`
+- `pnpm test -- tests/integration/git-memory-weekly-summary.test.ts`
+- `pnpm typecheck`
+- `pnpm lint`
+- `pnpm docs:sync-check`
+
+## Risks and Rollback (S5)
+
+- Risk: backfilled memory commits increase weekly-summary noise if low-risk entries accumulate.
+- Mitigation: keep memory commit bodies concise and use commit-log review in each finalize loop.
+- Rollback plan: revert `tools/git-memory/append-commit-log.sh`, `tools/git-memory/render-weekly-summary.py`, `tests/integration/git-memory-append-commit-log.test.ts`, `tests/integration/git-memory-weekly-summary.test.ts`, `docs/ai/commit-log/2026-02.md`, `docs/ai/weekly-summary.md`, and `docs/ai/tasks/T-010.md` together.
+
+
 ## Subtask Progress
-
-- [x] [S2] Implement scoped code changes
-- [x] [S3] Pass fast and full gates
-- [x] [S4] Update docs and risk notes
-
-
-## Subtask Progress
-- [x] [S4] Update docs and risk notes
+- [x] [S5] Milestone commit and memory finalize
