docs(loop): align workflow docs with main branch mode
Why:
Reflect the current loop branch policy and preserve latest loop run evidence in repository docs.
What:
- Updated architecture, constitution, task templates, and workflow docs to use main branch mode wording.
- Synced task metadata branch fields to current execution model.
- Added latest loop run-log artifact for traceability.
Impact:
- Documentation now matches implemented branch policy and reduces operator confusion.
Risk:
- Low. Changes are documentation and logging artifacts only.
Test:
- pnpm docs:sync-check
Prompt-Refs: ARCHITECT_v1,PLANNER_v1,BUILDER_v2,GUARDIAN_v1,REVIEWER_v1

--- a/docs/ai/tasks/T-010.md
+++ b/docs/ai/tasks/T-010.md
@@ -2,7 +2,7 @@
 
 - Status: Done
 - Owner: maintainer
-- Branch: `codex/010-batch-sim-and-balance-report`
+- Branch: `main`
 - Prompt-Plan: `ARCHITECT_v1`, `PLANNER_v1`
 - Prompt-Impl: `BUILDER_v2`
 - Prompt-Review: `GUARDIAN_v1`, `REVIEWER_v1`
